--- a/std_reports/scrapy.cfg
+++ b/std_reports/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = WICompCost.settings
+default = std_reports.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = WICompCost
+project = std_reports
