--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,23 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
     "configurations": [
         {
-            "type": "msedge",
-            "name": "https://sfs.dpi.wi.gov/sfsdw/CompCostReport.aspx",
+            "name": "Python: Attach using Process Id",
+            "type": "python",
+            "request": "attach",
+            "processId": "${command:pickProcess}",
+            "justMyCode": true
+        },
+        {
+            "name": "Python: Current File",
+            "type": "python",
             "request": "launch",
-            "url": "https://sfs.dpi.wi.gov/sfsdw/CompCostReport.aspx"
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "justMyCode": true
         }
     ]
 }
